스마트버스
현재 개발 중인 파일(api키 숨김)

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,34 +1,33 @@
 /* src/components/navbar.css */
+
 .navbar {
     background-color: #13151A;
     color: #fff;
-    padding: 4px 0;
+    padding: 1px 0;
     position: sticky; 
     top: 0; 
     z-index: 100; 
     border-bottom: 3px solid #26272C;
+    
   }
   
   .container {
     display: flex;
     padding-left: 10px;
+    height: 42px;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .logo {
-    font-size: 24px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #fff;
   }
   
   .nav-menu {
     list-style: none;
     display: flex;
+    position: relative;
     gap: 20px;
-    padding-right: 15px;
+    padding-right: 15px;    
+
   }
+  
   
   .nav-menu li {
     margin: 0;
@@ -37,5 +36,6 @@
   .nav-menu li a {
     text-decoration: none;
     color: #fff;
+    cursor: pointer;
   }
   
