--- a/src/components/MainLayout.css
+++ b/src/components/MainLayout.css
@@ -1,30 +1,29 @@
 /* src/components/MainLayout.css */
 
 .main-layout {
-    background-color: #13151A;
-    display: flex; 
-    justify-content: space-between; 
-    align-items: flex-start; 
-    padding: 20px;
+  background-color: #212328;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.map-container {
+  flex: 1;
+  height: 93.2vh; 
+  border: 2px solid #26272C;
+  border-right-width: 4px;
+  margin-left: 252px;
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .main-layout {
+    flex-direction: column;
   }
-  
+
   .map-container {
-    flex: 1; 
-    max-width: 80%;
-    height: 700px; 
-    border: 3px solid #792BF4; 
-    overflow-y: auto;
-    margin-left: 250px;
-    margin-bottom: 205px;
+    max-width: 100%;
+    height: 40vh; 
   }
-  
-  @media (max-width: 768px) {
-    .main-layout {
-      flex-direction: column; 
-      flex-direction: row; 
-    }
-    .map-container {
-      max-width: 100%; 
-      height: 300px; 
-    }
-  }
+}
+
