--- a/src/chats/styles.scss
+++ b/src/chats/styles.scss
@@ -19,14 +19,14 @@
 
 
 .chathome{
-    background-color: #212328;
+    background-color: #000000;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     
     .chatContainer{
-        border:1px solid white;
+        border:1px solid gray;
         border-radius: 10px;
         width: 65%;
         height: 80%;
@@ -38,8 +38,9 @@
         
         .chatSidebar{
             flex: 1;
-            background-color: #A68AEA;
+            background-color: #131519;
             color: #ddddf7;
+            border-right: solid 1px #293035;
             @include tablet{
                 position: relative;
             }
@@ -47,14 +48,15 @@
             .chatNavbar{
                 display: flex;
                 align-items: center;
-                background-color: #2f2d52;
-                height: 40px;
+                background-color: #131519;
+                border-bottom: solid 1px #293035;
+                height: 30px;
                 padding: 10px;
                 justify-content: space-between;
             }
             .chatLogo{
                font-weight: bold; 
-               color: #956EE7;
+               color: #fff;
                font-size: 21px;
                @include tablet{
                    display: none;
@@ -71,8 +73,8 @@
                     object-fit: cover;
                 }
                 button{
-                    background-color: #5d5b8d;
-                    color: #ddddf7;
+                    background-color: #956EE7;
+                    color: #fff;
                     font-size: 10px;
                     border: none;
                     cursor: pointer;
@@ -83,7 +85,8 @@
                 }
             }
             .chatSearch{
-                border-bottom: 1px solid gray;
+                background-color: #202226;
+                border-bottom: 1px solid #956EE7;
 
                 .searchForm{
                     padding: 10px;
@@ -109,7 +112,7 @@
                 cursor: pointer;
 
                 &:hover{
-                    background-color: #2f2d52;
+                    background-color: #202226;
                 }
                 img{
                     width: 50px;
@@ -128,8 +131,9 @@
             flex: 2;
 
             .chatInfo{
-                height: 40px;
-                background-color: #5d5b8d;
+                height: 30px;
+                border-bottom: solid 1px #293035;
+                background-color: #0F1216;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -149,9 +153,9 @@
                 }
             }
             .messages{
-                background-color: #ddddf7;
+                background-color: #151a1f;
                 padding: 10px;
-                height: calc(100% - 150px);
+                height: calc(100% - 140px);
                 overflow-y: scroll;
                 
                 .message{
@@ -162,8 +166,11 @@
                     .messageInfo{
                         display: flex;
                         flex-direction: column;
-                        color: gray;
+                        color: #fff;
                         font-weight: 300;
+                        span{
+                            padding-left: 6px;
+                        }
                         img{
                             width: 40px;
                             height: 40px;
@@ -186,6 +193,13 @@
                         img{
                             width: 50%;
                         }
+                        .messageTime{
+                            position: relative;
+                            top: -26px;
+                            color:lightgray;
+                            font-weight: 300;
+                            font-size: 15px;
+                        }
                     }
                     &.owner{
                         flex-direction:  row-reverse;
@@ -194,7 +208,7 @@
                             align-items: flex-end;
                             
                             p{
-                                background-color: #8da4f1;
+                                background-color: #A68AEA;
                                 color: white;
                                 border-radius: 10px 0px 10px 10px;
                             }
@@ -238,8 +252,11 @@
                         border : none;
                         padding: 10px 15px;
                         color: white;
-                        background-color: #8da4f1;
+                        background-color: #956EE7;
                         cursor: pointer;
+                    }
+                    button:hover{
+                        background-color: #A68AEA; 
                     }
 
                 }
