--- a/src/components/BusInfo.css
+++ b/src/components/BusInfo.css
@@ -35,7 +35,24 @@
     transform: rotate(360deg);
   }
 }
+.bus-item:hover{
+  background-color: #956EE7; 
 
+}
+
+.refresh-button{
+  background-color: #956EE7; 
+  color: #fff;
+  border: none;
+  border-radius: 5px; 
+  padding: 0px 8px;
+  cursor: pointer;
+  font-size: 24px; 
+  font-weight: bold;
+}
+.refresh-button:hover {
+  background-color: #A68AEA; 
+}
 .hide-button {
     background-color: #956EE7; 
     color: #fff; 
@@ -88,5 +105,17 @@
   h2 {
     margin-top: 65px;
     margin-left: 45px;
+    color : #956EE7;
   }
   
+.info-button {
+  background-color: #956EE7;
+  color : #fff;
+  border-radius: 5px; 
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+}
+.info-button:hover {
+  background-color: #A68AEA; 
+}
